# esptools

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Cargo.toml  LICENSE.txt  README.md  bindfltapi.def  bindfltapi.h  bindfltapi.lib  bindlib.cppm  bindmods.cpp  repo.cpp  repo.cppm  repo_tests.cpp  rustfmt.toml  stdafx.h
CommonLibSSE-ng-sys/: Cargo.toml  build.rs  wrapper.hpp
SymlinkHack/: Cargo.toml
bind_tools/: CMakeLists.txt  bind_list.cpp  bind_remove.cpp
bsatools/: Cargo.toml  common.rs  lib.rs  parser.rs  raw.rs  raw_types.rs
cocci/: bst.skel.c  inst_bst.cocci
esptools/: Cargo.toml
esptools/src/: bsa.rs  common.rs  espparser.rs  lib.rs  records.rs
esptools/tests/testdata/: empty.esm  test1.bsa
include/esptools/: compact.h  esp_file_mmap.h  esptools.h  fields.h  macros.h  records.h  refr_track.h  types.h
launcher/: Cargo.toml
launcher/src/: lib.rs  main.rs  overlayfs_overlay.rs  vdf_parser.rs
mm_api_interaction/: Cargo.toml
mm_api_interaction/src/: api.rs  lib.rs  main.rs  nxm.rs
mm_archive/: Cargo.toml
mm_archive/src/: lib.rs  sevenz_command.rs  traits.rs  zip_rs.rs
mm_archive/testdata/: testdata1.7z  testpermsro  testpermsrx
mm_archive/tests/: zip.rs
mm_cli/: Cargo.toml
mm_cli/src/: main.rs
mm_store/: Cargo.toml  lib.rs  perms.rs  repo.rs  xattr_util.rs
mm_store/src/: archive.rs  keyfile.rs  lib.rs  mutable_tree.rs  perms.rs  repo.rs  xattr_util.rs
mm_store/testdata/: testpermsrwx
mm_store/testdata/repo/: config
mm_store/tests/: test_user_only.rs
mm_store/tools/: var_dump.rs
rust_ostree/: Cargo.toml  lib.rs  repo.rs  xattr_util.rs
skse64-sys/: Cargo.toml  build.rs  wrapper.hpp
src/: #rbtree.c#  bst.h  compact.c  esp_file_mmap.c  fileio.c  fileio.h  grow_array.h  memory_mapping.c  memory_mapping.h  parseutils.c  parseutils.h  private_macros.h  rbtree.c  rbtree.h  records.c  records.rs  win32_fileio.c  win32_memory_mapping.c
src/posix/: posix_fileio.c  posix_memory_mapping.c
src/win32/: win32_memory_mapping.c
symlink_hack/: Cargo.toml
symlink_hack/src/: lib.rs
tests/: just_compile.c  test_bst.c  test_empty_esp.c  test_empty_esp_header.c  test_grow_array.c  test_just_compile.c  test_memory_mapping.c  testconfig.h.in
tests/testdata/: OrphanTest.esp
