[package]
name = "SymlinkHack"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
version = "*"
features = [
    "Win32_System_Diagnostics_Debug", "Win32_System_SystemInformation"
]
