[package]
name = "mm_api_interaction"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0-only"

[dependencies]
tokio-tungstenite = {version = "*", features = ["native-tls"]}
url = "*"
thiserror = "*"
uuid = {version = "*", features = ["v4"]}
reqwest = {version = "*", features = ["blocking", "json", "stream"]}
toml = "*"
log = "*"
serde = {version = "*", features = ["derive"], optional = true}

[features]
default = ["serde"]
