[package]
name = "mm_archive"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
zip = { version = "*", optional = true }
lending-iterator = "*"
serde = "*"
time = "*"
tempfile = { version = "*", optional = true }
num_enum = "*"
strum = "*"
strum_macros = "*"
thiserror = "*"

[features]
default = ["7z_command"]
7z_command = ["tempfile"]
