[package]
name = "mm_store"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "var_dump"
path = "tools/var_dump.rs"


[lib]
path = "lib.rs"

[dependencies.windows]
version = "*"
features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_Security",
    "Win32_System_WindowsProgramming"
]

[dependencies]
widestring = "*"
cap-std = "*"
thiserror = "*"
serde = { version = "*", features = ["derive"] }
toml = "*"
serde_with = "*"
zvariant = "*"
strum = "*"
strum_macros = "*"
sha2 = "*"
clap = "*"
byteorder = "*"
