[package]
name = "mm_store"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0-only"

[[bin]]
name = "var_dump"
path = "tools/var_dump.rs"


[lib]
path = "lib.rs"

[target.'cfg(windows)'.dependencies.windows]
version = "*"
features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Memory",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_WindowsProgramming"
]

[dependencies]
widestring = "*"
cap-std = { version = "*", features = ["fs_utf8"] }
thiserror = "*"
serde = { version = "*", features = ["derive"] }
toml = "*"
serde_with = "*"
zvariant = "*"
strum = "*"
strum_macros = "*"
digest = "*"
camino = "*"
sha2 = "*"
clap = "*"
byteorder = "*"
hex = "*"

