[package]
name = "mm_store"
edition.workspace = true
license.workspace = true
version.workspace = true

[target.'cfg(windows)'.dependencies.windows]
version = "*"
features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Memory",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_WindowsProgramming"
]

[dependencies]
widestring = "*"
cap-std = "*"
thiserror = "*"
serde = { version = "*", features = ["derive"] }
serde_with = "*"
zvariant = "*"
strum = "*"
strum_macros = "*"
digest = "*"
camino = "*"
sha2 = "*"
clap = "*"
byteorder = "*"
hex = "*"
serde_ini = "*"
paste = "*"
base64 = "*"
cap-tempfile = "*"
io_tee = "*"
mm_archive = { path = "../mm_archive" }
