[package]
name = "rust_ostree"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies.windows]
version = "*"
features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_Security",
    "Win32_System_WindowsProgramming"
]

[dependencies]
widestring = "*"
cap-std = "*"
thiserror = "*"
