[package]
name = "symlink_hack"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0-only"

[lib]
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
version = "*"
features = [
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
    "Win32_UI_Shell",
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_System_WindowsProgramming",
    "Win32_System_Memory",
    "Win32_Globalization",
    "Win32_Security"
]

[dependencies]
log = { features = ["std"], version = "*" }
bitflags = "*"
num-traits = "*"
